--- a/women/pages/text_list/text_list.wxml
+++ b/women/pages/text_list/text_list.wxml
@@ -1,14 +1,7 @@
 <!-- 文章列 -->
-<view class='post-container' wx:for="{{text_list}}" wx:key="" wx:for-item="item" wx:for-index="idx">
-  <!-- 图片 -->
-  <view class='posts-ic'>
-    <image class='posts-img' src='{{item.img_src}}'></image>
+<block class="list" wx:for="{{text_list}}" wx:key="" wx:for-item="item" wx:for-index="idx">
+  <view class='list-container' bindtap='toContent' data-id='{{item.id}}'>
+    <text class='list-title'>{{item.title}}</text>
+    <text class='list-content'>{{item.content}}</text>
   </view>
-  <view class='posts-tc'>
-    <!-- 标题 -->
-    <text class='posts-title'>{{item.title}}</text>
-    <!-- 内容 -->
-    <text class='posts-content'>{{item.content}}</text>
-  </view>
-  
-</view>
+</block>
