文章实现接口调数据

--- a/women/pages/text_content/text_content.wxml
+++ b/women/pages/text_content/text_content.wxml
@@ -8,4 +8,7 @@
   <view class='text-content'>
     <text>{{content}}</text>
   </view>
+  <view style='text-align: center;'>
+    <text>End</text>
+  </view>
 </view>
