--- a/women/pages/text_list/text_list.wxss
+++ b/women/pages/text_list/text_list.wxss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 115rpx;
+  /* height: 115rpx; */
+  height: 70rpx;
   margin-top: 20rpx;
   margin-left: 20rpx;
   border-bottom: 1px solid #333;
@@ -14,13 +15,13 @@
   font-family: 	Microsoft YaHei;
   font-size: 35rpx;
   color: #333;
-  width: 80%;
+  width: 90%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space:nowrap;
 }
 
-.list-content {
+/* .list-content {
   font-family: SimSun;
   font-size: 25rpx;
   color: #cccccc;
@@ -32,4 +33,4 @@
   text-overflow: ellipsis;
   -webkit-line-clamp:2;
   -webkit-box-orient:vertical; 
-}
+} */
