--- a/women/pages/shopcar/shopcar.wxss
+++ b/women/pages/shopcar/shopcar.wxss
@@ -1,1 +1,103 @@
-/* pages/shopcar/shopcar.wxss */
+Page {
+  background-color: #ccc;
+}
+.container {
+  background-color: #fff;
+  margin-top: 10px;
+}
+
+.shop_name {
+  margin-left: 10rpx;
+}
+
+/* 商品信息 */
+.shop_content {
+  width: 100%;
+  height: 120px;
+  border: 1px solid #f33;
+}
+/* 图片 */
+.img_container {
+  width: 30%;
+  float: left;
+}
+.img {
+  width: 120px;
+  height: 120px;
+}
+.content_container {
+  width: 70%;
+  float: left;
+}
+/* 标题和删除按钮 */
+.td {
+  /* border: 1px solid #f33; */
+  padding: 10rpx auto;
+}
+.title {
+  padding-left: 10rpx;
+}
+.delete {
+  padding-right: 10rpx;
+  float: right;
+}
+/* 尺寸、颜色 */
+.sc {
+  padding-top: 20px;
+  padding-left: 10rpx;
+}
+/* 价格、数量 */
+.mc {
+  width: 100%;
+  padding-top: 20px;
+  padding-left: 10rpx;
+}
+.money {
+  width: 30%;
+  float: left;
+}
+.count {
+  width: 70%;
+  float: right;
+  text-align: center;
+}
+.jian, .jia {
+  width:30%;
+  float:left;
+}
+.count_value {
+  width: 40%;
+  float: left;
+}
+
+
+/* 底部全选组 */
+.footer {
+  background-color: #fff;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-top: 1px solid #ccc;
+  width: 100%;
+  position:fixed;
+  bottom: 0;
+  text-align: center;
+}
+.qx {
+  width: 20%;
+  float: left;
+}
+.hj {
+  width: 50%;
+  float: left;
+}
+.js {
+  width: 30%;
+  float: left;
+}
+.js_text {
+  background-color: #f33;
+}
+.count_img {
+  width: 20px;
+  height: 20px;
+}
