--- a/women/pages/shopcar/shopcar.wxml
+++ b/women/pages/shopcar/shopcar.wxml
@@ -1,30 +1,32 @@
-<view class='container'>
-  <view class='shop_name'>{{shop_name}}</view>
+<view style='background-color:#ccc;height:10px;'></view>
+<view class='shop_name'>{{shop_name}}</view>
+<view class='container' wx:for="{{data}}" wx:key="" wx:for-item="item">
   <view class='shop_content'>
     <!-- 商品图 -->
     <view class='img_container'>
-      <image  class='img' src='{{img_src}}'></image>
+      <checkbox class='checkbox' value="{{checkbox}}" checked></checkbox>
+      <image  class='img' src='{{item.img_src}}'></image>
     </view>
     <!-- 商品内容 -->
     <view class='content_container'>
       <!-- 标题及删除 -->
       <view class='td'>
-        <text class='title'>{{title}}</text>
+        <text class='title'>{{item.title}}</text>
         <text class='delete'>删除</text>
       </view>
       <!-- 尺寸及颜色 -->
       <view class='sc'>
-        <text class='sc_text'>尺寸：{{size}} 颜色：{{color}}</text>
+        <text class='sc_text'>尺寸：{{item.size}} 颜色：{{item.color}}</text>
       </view>
       <!-- 价格及数量 -->
       <view class='mc'>
         <view class='money'>
-          <text>{{money}}</text>
+          <text>{{item.money}}</text>
         </view>
         <view class='count'>
           <text class='jian'>-</text>
           <view class='count_value'>
-            <input value='{{count}}' />
+            <input type='number' style='background-color:#999;' value='{{item.count}}' />
           </view>
           <text class='jia'>+</text>
         </view>
@@ -33,14 +35,14 @@
   </view>
   <view class='footer'>
     <view class='qx'>
+      <checkbox class='checkbox_all' value='{{checkbox_all}}'  checked></checkbox>
       <text>全选</text>
     </view>
     <view class='hj'>
-      <text>合计：{{money_all}}</text>
+      <text>合计: {{money_all}} 元</text>
     </view>
     <view class='js'>
-      <text class='js_text'>结算</text>
+      <button class='js_btn' bindtap='to_pay'>结算</button>
     </view>
-    
   </view>
 </view>
