--- a/women/pages/my/my.wxss
+++ b/women/pages/my/my.wxss
@@ -1,1 +1,52 @@
-/* pages/my/my.wxss */
+Page {
+  background-color: #ccc;
+}
+.container {
+  background-color: #fff;
+}
+
+.user_info {
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid #666;
+}
+
+.indent{
+  border-bottom: 1px solid #666;
+  margin-top: 10px;
+  padding-bottom: 10px;  
+}
+
+.indent_btn {
+  height: 30px;
+  width: 100%; 
+  display: flex;
+  flex-direction: row;
+}
+.indent_btn text {
+  text-align: center;
+  padding-top: 10px;
+}
+.all_indent {
+  width: 40%;
+}
+
+.no_pay {
+  width: 30%;
+}
+
+.no_indent{
+  width: 30%;
+}
+
+.address, .service, .favorite, .red_bage {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #666;
+}
+
+.lg {
+  color: #666;
+  float: right;
+  padding-right: 3px;
+}
