--- a/women/pages/shop_content/shop_content.wxss
+++ b/women/pages/shop_content/shop_content.wxss
@@ -1,3 +1,4 @@
+@import "../template/tabar/template.wxss";
 Page {
   background-color: #ccc; 
 }
@@ -63,4 +64,19 @@ Page {
 
 .img {
   width: 100%;
+}
+
+.tj {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 60px; 
+}
+
+.footer {
+  background-color: #fff;
+  border-top: 1px solid #ccc;
+  width: 100%;
+  position:fixed;
+  bottom: 0;
+  text-align: center;
 }
