--- a/women/pages/shop_content/shop_content.wxss
+++ b/women/pages/shop_content/shop_content.wxss
@@ -1,4 +1,3 @@
-@import "../template/tabar/template.wxss";
 Page {
   background-color: #ccc; 
 }
@@ -79,4 +78,33 @@ Page {
   position:fixed;
   bottom: 0;
   text-align: center;
+}
+
+
+.tabar_bottom {
+  width: 100%;
+  text-align: center;
+}
+.tabar_bottom view {
+  float: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.sy {
+  background-color:#999;
+  width: 20%;
+}
+
+.cart {
+  background-color:#ccc;
+  width: 20%;
+}
+
+.addCart{
+  background-color:#9966ff;
+  width: 30%;
+}
+.buy{
+  background-color:red;
+  width: 30%;
 }
