增加全选功能

--- a/women/pages/shopcar/shopcar.wxml
+++ b/women/pages/shopcar/shopcar.wxml
@@ -6,15 +6,17 @@
 <block wx:else>
   <view style='background-color:#ccc;height:10px;'></view>
   <view class='shop_name'>{{shop_name}}</view>
-  <view class='container' wx:for="{{shop_cart_array}}" wx:key="" wx:for-item="item">
-    <view class='shop_content' catchtap='toContent' data-id='{{item.commodity_id}}'>
+  <view class='container' wx:for="{{shop_cart_array}}" wx:key="" wx:for-item="item" wx:for-index='index'>
+    <view class='shop_content'>
       <!-- 商品图 -->
-      <view class='img_container'>
-        <checkbox class='checkbox' value="{{checkbox}}" checked></checkbox>
+      <view class='img_container'  bindtap="bindCheckbox" data-index="{{index}}">
+      <!-- 1选中、2未选中、3失效 -->
+        <icon wx:if="{{item.selected == 1}}" type="success" size="20" class="checkbox"/>
+        <icon wx:elif="{{item.selected == 3}}" type="cancel" size="20" bindtap="bindCheckbox" data-index="{{index}}" class="checkbox"/> 
         <image  class='img' src='{{item.img_url}}'></image>
       </view>
       <!-- 商品内容 -->
-      <view class='content_container'>
+      <view class='content_container' catchtap='toContent' data-id='{{item.commodity_id}}'>
         <!-- 标题及删除 -->
         <view class='td'>
           <text class='title'>{{item.title}}</text>
@@ -30,26 +32,36 @@
             <text>￥{{item.money_now}}</text>
           </view>
           <view class='count'>
-            <button size='mini' class='jian' catchtap='jian' data-count='{{item.count}}' data-id='{{item.sc_id}}'>-</button>
+            <button size='mini' class='jian' catchtap='jian' data-count='{{item.count}}' data-id='{{item.sc_id}}' data-index="{{index}}">-</button>
             <view class='count_value' catchtap='inputCount_stop'>
-              <input type='number' style='background-color:#999;' value='{{item.count}}' data-id='{{item.sc_id}}'  bindconfirm='inputCount'/>
+              <input type='number' style='background-color:#ccc;' value='{{item.count}}' data-id='{{item.sc_id}}' data-index="{{index}}" bindconfirm='inputCount'/>
             </view>
-            <button size='mini' class='jia' catchtap='jia' data-count='{{item.count}}' data-id='{{item.sc_id}}'>+</button>
+            <button size='mini' class='jia' catchtap='jia' data-count='{{item.count}}' data-id='{{item.sc_id}}' data-index="{{index}}">+</button>
           </view>
         </view>
       </view>
     </view>
     <view class='footer'>
-      <view class='qx'>
-        <checkbox class='checkbox_all' value='{{checkbox_all}}'  checked></checkbox>
-        <text>全选</text>
+      <view class='qx' wx:if="{{selected_all}}" bindtap="bindCheckAll">
+        <icon  type="success" size="20"  />
+        <text>已全选</text>
+      </view>
+      <view class='qx' wx:else  bindtap="bindCheckAll">
+        <icon  type="cancel" size="20"/>
+        <text>未全选</text>
       </view>
       <view class='hj'>
         <text>合计: {{money_all}} 元</text>
       </view>
       <view class='js'>
-        <button class='js_btn' bindtap='to_pay'>结算</button>
+        <view wx:if='{{money_all == 0}}'>
+          <button class='js_btn' bindtap='to_pay' disabled='true'>结算</button>
+        </view>
+        <view wx:else>
+          <button class='js_btn' bindtap='to_pay'>结算</button>
+        </view>
       </view>
     </view>
   </view>
 </block>
+<view style='height:60px;'></view>
