--- a/women/pages/payment/payment.wxml
+++ b/women/pages/payment/payment.wxml
@@ -1,2 +1,4 @@
-<!--pages/payment/payment.wxml-->
-<text>pages/payment/payment.wxml</text>
+<import src="../template/commodity/template.wxml" />
+<view wx:for='{{pay_commodity_list}}' wx:key='' wx:for-item='item'>
+  <template is='commodity' />
+</view>
