--- a/women/pages/payment/payment.wxss
+++ b/women/pages/payment/payment.wxss
@@ -1,1 +1,5 @@
-/* pages/payment/payment.wxss */
+@import "../template/commodity/template.wxss";
+.container {
+  background-color: #fff;
+  padding: 0 10rpx;
+}
